style.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    min-height: 100vh;
    min-width: 1000px;
    margin: 0;
    display: flex;
    flex-direction: column;
}

h1 {
    margin: 0;
    font-size: 48px;
    color: #f0e1c3;
}

h2 {
    margin: 0;
    font-size: 36px;
    color: #1f2937;
}

h3 {
    margin: 0;
    font-size: 24px;
    color: #1f2937;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    gap: 20px;
}

a {
    color: #f0e1c3ae;
    text-decoration: none;
}

button {
    padding: 5px 20px;
    background-color: #036829;
    color: #f0e1c3;
    font-weight: bold;
    border: none;
    border-radius: 10px;
    font-size: 18px;
}

button:hover {
    background-color: #03682abb;
}

img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.header, .welcome, .info, .testimonials, .sign-up, .footer {
    padding-left: 150px;
    padding-right: 150px;
}

.header {
    background-color: rgb(2, 70, 28);
    padding-top: 10px;
    padding-bottom: 10px;
    display: flex;
    justify-content: space-between;
    text-wrap: nowrap;
}

.welcome {
    background-color: rgb(2, 70, 28);
    background-image: url(images/view-welcome.jpg);
    background-size: cover;
    height: 700px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.info {
    background-color: #F4ECDC;
    padding-top: 50px;
    padding-bottom: 50px;
    min-height: 550px;
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 50px;
}

.testimonials {
    background-color: #c5bdae;
    padding-top: 50px;
    padding-bottom: 50px;
    min-height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
    flex-wrap: wrap;
}

.sign-up {
    background-image: url(images/pnw-sign-up.jpg);
    background-size: cover;
    min-height: 400px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer {
    background-color: rgb(2, 70, 28);
    color: #f0e1c3ae;
    min-height: 75px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo {
    width: 200px;
    margin-right: 20px;
    display: flex;
    flex-shrink: 0;
}

.header-right {
    display: flex;
    align-items: center;
}

.welcome-msg {
    background-color: rgb(2, 70, 28, 0.8);
    padding: 50px;
    border-radius: 25px;
    max-width: 800px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 15px;
}

.welcome-msg > .subtext {
    color: #f0e1c3ae;
    margin-top: -5px;
}

.cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 30px;
}

.card, .img-wrap {
    width: 250px;
}

.card {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.card > .subtext {
    color: #1f2937c8;
}

.testimonial-wrap {
    width: 550px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.quote {
    color: #1f2937c8;
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
}

.author {
    color: #1f2937;
    font-size: 20px;
    font-weight: bold;
    text-align: end;
    margin-right: 40px;
}

.sign-up-wrap {
    background-color: rgb(2, 70, 28, 0.8);
    padding: 35px;
    border-radius: 25px;
    max-width: 800px;
    display: flex;
    align-items: center;
    gap: 30px;
}

.sign-up-left {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.sign-up-left > h3 {
    color: #f0e1c3;
}

.sign-up-left > .subtext {
    color: #f0e1c3ae;
}

.sign-up-right {
    flex-basis: 25%;
    flex-shrink: 0;
    text-align: center;
}

.img-wrap {
    height: 225px;
    border: 5px solid rgb(2, 70, 28);
    border-radius: 10px;
    box-shadow: 0 0 10px rgb(2, 70, 28);
    overflow: hidden;
}

.subtext {
    font-size: 18px;
}

.buttons {
    display: flex;
    gap: 10px;
}

